[package]
name = "alerion"
description = "Alerion core"
version = "0.1.0"
edition = "2021"

[dependencies]
alerion_webserver = { package = "webserver", version = "0.1.0", path = "../webserver" }
alerion_config = { package = "config", version = "0.1.0", path = "../config" }
alerion_servers = { package = "servers", version = "0.1.0", path = "../servers" }
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["rt"] }
futures = "0.3.30"
