[package]
name = "alerion_core"
description = "Core alerion functionality"
version = "0.1.0"
edition = "2021"

[dependencies]
alerion_datamodel = { version = "0.1.0", path = "../alerion_datamodel" }
env_logger = "0.11.3"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["rt", "fs", "time", "sync"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.115"
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["serde"] }
bytestring = "1.3.1"
jsonwebtoken = "9.3.0"
actix = "0.13.3"
actix-web-actors = "4.3.0"
log = "0.4.21"
pin-project-lite = "0.2.14"
reqwest = { version = "0.12.3" }
smallvec = { version = "1.13.2", features = ["serde"] }
directories = "5.0.1"
bollard = "0.16.1"
bitflags = "2.5.0"
num_cpus = "1.16.0"
sysinfo = "0.30.11"
poem = { version = "3.0.0", features = ["websocket"] }
