[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
alerion_config = { package = "config", version = "0.1.0", path = "../config" }
bytestring = "1.3.1"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = "1.8.0"
